Summer_Assignment/log/build_2025-06-09_23-15-06/conecluster/stdout_stderr.log
running egg_info
writing ../../build/conecluster/conecluster.egg-info/PKG-INFO
writing dependency_links to ../../build/conecluster/conecluster.egg-info/dependency_links.txt
writing entry points to ../../build/conecluster/conecluster.egg-info/entry_points.txt
writing requirements to ../../build/conecluster/conecluster.egg-info/requires.txt
writing top-level names to ../../build/conecluster/conecluster.egg-info/top_level.txt
reading manifest file '../../build/conecluster/conecluster.egg-info/SOURCES.txt'
writing manifest file '../../build/conecluster/conecluster.egg-info/SOURCES.txt'
running build
running build_py
copying conecluster/ass2.py -> /home/supan/RT/Perception/Summer_Assignment/build/conecluster/build/lib/conecluster
running install
running install_lib
copying /home/supan/RT/Perception/Summer_Assignment/build/conecluster/build/lib/conecluster/ass2.py -> /home/supan/RT/Perception/Summer_Assignment/install/conecluster/lib/python3.10/site-packages/conecluster
byte-compiling /home/supan/RT/Perception/Summer_Assignment/install/conecluster/lib/python3.10/site-packages/conecluster/ass2.py to ass2.cpython-310.pyc
running install_data
  File "/home/supan/RT/Perception/Summer_Assignment/install/conecluster/lib/python3.10/site-packages/conecluster/ass2.py", line 54
    top_intensity = cluster[(cluster[:, 2] > 0.1) )]
                                                  ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '['

running install_egg_info
removing '/home/supan/RT/Perception/Summer_Assignment/install/conecluster/lib/python3.10/site-packages/conecluster-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/conecluster/conecluster.egg-info to /home/supan/RT/Perception/Summer_Assignment/install/conecluster/lib/python3.10/site-packages/conecluster-0.0.0-py3.10.egg-info
running install_scripts
Installing cc script to /home/supan/RT/Perception/Summer_Assignment/install/conecluster/lib/conecluster
writing list of installed files to '/home/supan/RT/Perception/Summer_Assignment/build/conecluster/install.log'
